<resources>
    <string name="app_name" translatable="false">CheatSheet 2</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="text_drawer_option_overview">Overview</string>
    <string name="text_drawer_option_messages">Messages</string>
    <string name="text_drawer_option_assignments">Assignments</string>
    <string name="text_drawer_option_homework">Homework</string>
    <string name="text_drawer_option_notes">Notes</string>
    <string name="text_drawer_option_classmates">Classmates</string>
    <string name="text_drawer_classes">Classes</string>
    <string name="text_drawer_option_add_class">Add class</string>
    <string name="text_drawer_other">Other</string>
    <string name="text_drawer_option_account">Account</string>
    <string name="text_drawer_option_settings">Settings</string>
    <string name="text_drawer_option_log_out">Log out</string>

    <string name="title_settings_personalise">Personalise timetable</string>
    <string name="text_settings_personalise">Only classes for your group will be shown</string>
    <string name="title_settings_name">Name</string>
    <string name="text_settings_name">Select your name to get a personalised timetable</string>

    <string name="text_lesson_current">Current</string>
    <string name="text_lesson_up_next">Up next</string>
    <string name="text_group_a">Group A</string>
    <string name="text_group_b">Group B</string>
    <string name="text_week_number">%d. Week</string>
    <string name="text_lesson_number">%d. Lesson</string>
    <string name="text_tab_monday">Mon</string>
    <string name="text_tab_tuesday">Tue</string>
    <string name="text_tab_wednesday">Wed</string>
    <string name="text_tab_thursday">Thu</string>
    <string name="text_tab_friday">Fri</string>
    <string name="text_lesson_end">Lesson has ended</string>
    <string name="text_undefined">undefined</string>
    <string name="text_undefined_number">-</string>
    <string name="text_snackbar_soon">Coming soon :P</string>
</resources>
