<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home_black_24dp"
            android:id="@+id/nav_overview"
            android:title="@string/text_drawer_option_overview"
            android:checked="true"/>
        <item
            android:title="@string/text_drawer_option_messages"
            android:icon="@drawable/ic_question_answer_black_24dp"/>
        <item
            android:title="@string/text_drawer_option_assignments"
            android:icon="@drawable/ic_assignment_black_24dp"/>
        <item
            android:title="@string/text_drawer_option_homework"
            android:icon="@drawable/ic_alarm_black_24dp"/>
        <item
            android:title="@string/text_drawer_option_notes"
            android:icon="@drawable/ic_class_black_24dp"/>
        <item
            android:title="@string/text_drawer_option_classmates"
            android:id="@+id/nav_classmates"
            android:icon="@drawable/ic_group_black_24dp"/>
    </group>

    <item android:title="@string/text_drawer_classes">
        <menu>
            <item
                android:title="@string/text_drawer_option_add_class"
                android:icon="@drawable/ic_add_black_24dp"/>
        </menu>
    </item>

    <item android:title="@string/text_drawer_other">
        <menu>
            <item
                android:title="@string/text_drawer_option_account"
                android:icon="@drawable/ic_person_black_24dp"/>
            <item
                android:title="@string/text_drawer_option_settings"
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"/>
            <item
                android:title="@string/text_drawer_option_log_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"/>
        </menu>
    </item>

</menu>
