<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:title="@string/title_settings_personalise"
        android:summary="@string/text_settings_personalise"
        android:key="personaliseTimetable"
        android:defaultValue="false"
        />

    <ListPreference
        android:title="@string/title_settings_name"
        android:summary="@string/text_settings_name"
        android:key="selectedName"
        android:defaultValue="0"
        android:dependency="personaliseTimetable"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues" />

    <!--CheckBoxPreference android:title="Use alpha transparency"
        android:summary="Nicer rendering of past lessons (May affect performance)"
        android:key="useAlpha"
        android:defaultValue="true"
        />

    <SwitchPreference android:title="Week starts with Monday"
        android:summary="When enabled, Monday will be used as the first day of the week"
        android:key="mondayIsFirstDay"
        android:defaultValue="true"
        /-->

</PreferenceScreen>